# local-llm-pdf-chat

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start.sh
backend/src/: lmstudio_routes.py  pdf_routes.py  render_server.py
backend/tests/: conftest.py  test_lmstudio_proxy.py  test_render_pdf.py
frontend/: package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatView.tsx  PagePicker.tsx  PdfDropZone.tsx
frontend/src/lib/: lmstudioClient.ts  pdfRenderer.ts  types.ts
frontend/tests/: balloon.spec.ts  e2e-usecase.spec.ts  global-teardown.ts  pdf-aspect-check.spec.ts  pdf-display-check.spec.ts  pdf-grid-layout.spec.ts  pdf-image-save.spec.ts  pdf-image-save2.spec.ts  pdf-load.spec.ts  pdf-render-check.spec.ts
frontend/tests/pdf/: pdf-basic-usage.spec.ts  pdf-demo-scenario.spec.ts
mcp/pdf_image_mcp/: server.py
mcp/tests/: conftest.py  test_server.py
