[project]
name = "pdf-image-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "fastmcp>=2.0",
    "httpx>=0.28.1",
    "pymupdf>=1.24",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
]

[project.scripts]
pdf-image-mcp = "pdf_image_mcp.server:main"

[dependency-groups]
dev = ["anyio[trio]>=4.0", "pytest>=8.0", "pytest-anyio>=0.0.0", "anyio>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["backend/tests", "mcp/tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["mcp/pdf_image_mcp"]
